--- a/client/assets/styles/eJuices.scss
+++ b/client/assets/styles/eJuices.scss
@@ -22,6 +22,7 @@ $font-color: rgb(2, 44, 34);
            color: $font-color;
            background: $background-color;
            box-shadow: 0 0 40px red;
+           font-weight: 900;
        }
    }
 }
